--- a/app/src/main/res/layout/activity_country_select.xml
+++ b/app/src/main/res/layout/activity_country_select.xml
@@ -34,18 +34,31 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/activity_city_select_listview"
+        <LinearLayout
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:divider="@null" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/activity_country_select_textview_hotCiy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:text="热门城市" />
+
+            <ListView
+                android:id="@+id/activity_city_select_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null" />
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="20dp"
             android:id="@+id/activity_city_select_recycview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp" />
     </LinearLayout>
 
 
