--- a/app/src/main/res/layout/item_travel_attractions_listview.xml
+++ b/app/src/main/res/layout/item_travel_attractions_listview.xml
@@ -69,7 +69,8 @@
         android:id="@+id/item_travel_attentions_listview_textview_rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray">
+        android:layout_margin="5dp"
+        android:background="#DDDD">
 
         <TextView
             android:id="@+id/item_travel_attentions_listview_textview_name"
