--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/fragment_replace_id"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/fragment_replace_id">
+        android:layout_height="200dp">
 
     </FrameLayout>
 
@@ -33,5 +33,29 @@
             android:text="我的收藏" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/fragment_myself_set"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:background="#e9f1f6"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@mipmap/ic_login_shezhi" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="12dp"
+            android:text="设置" />
+    </LinearLayout>
 </LinearLayout>
