--- a/app/src/main/res/layout/fragment_succeed.xml
+++ b/app/src/main/res/layout/fragment_succeed.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,7 +22,7 @@
             android:id="@+id/fragment_myself_myphoto_1"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_marginTop="50dp"
             android:src="@mipmap/ic_myself_loginphoto" />
 
@@ -30,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/fragment_myself_myphoto_1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
+            android:textColor="#758a99"
             android:text="用户名"
             android:textSize="20sp" />
 
