--- a/app/src/main/res/layout/comment_item_list.xml
+++ b/app/src/main/res/layout/comment_item_list.xml
@@ -1,66 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/details_list_item_avatar_url"
+            android:id="@+id/comment_list_item_avatar_url"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="25dp"
-            android:src="@mipmap/mm"/>
+            android:src="@mipmap/mm" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/details_list_item_username"
+                    android:id="@+id/comment_list_item_username"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="1111111"
                     android:layout_marginTop="20dp"
-                    android:textSize="18dp"
-                    android:textColor="#000000"/>
+                    android:text="1111111"
+                    android:textColor="#000000"
+                    android:textSize="18dp" />
+
                 <TextView
-                    android:id="@+id/details_list_item_create"
-                    android:textSize="18dp"
+                    android:id="@+id/comment_list_item_create"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="shijian"
-                    android:gravity="right"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
+                    android:gravity="right"
+                    android:text="shijian"
                     android:textColor="#737171"
-                    />
+                    android:textSize="18dp" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/details_list_item_reply"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#737171"
+                android:layout_marginTop="10dp"
                 android:text=""
-                android:layout_marginTop="5dp"
-                android:textSize="15dp"/>
+                android:textColor="#737171"
+                android:textSize="15dp" />
+
             <TextView
-                android:id="@+id/details_list_item_content"
+                android:id="@+id/comment_list_item_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#050505"
+                android:layout_marginTop="10dp"
                 android:text="pinglun"
-                android:textSize="18dp"/>
+                android:textColor="#050505"
+                android:textSize="18dp" />
         </LinearLayout>
 
     </LinearLayout>
-    <View
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"/>
 </LinearLayout>
