--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:drawablePadding="3dp"
             android:drawableTop="@drawable/selector_music"
             android:gravity="center"
-            android:text=" 独立音乐"
+            android:text=" 音乐"
             android:textColor="@drawable/selector_font"
             android:textSize="11dp"/>
         <RadioButton
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
@@ -59,7 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:drawablePadding="3dp"
@@ -76,7 +76,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/selector_picture"
@@ -92,7 +92,7 @@
             android:drawablePadding="3dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
@@ -107,8 +107,8 @@
             android:drawableTop="@drawable/selector_myself"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
