--- a/app/src/main/res/drawable/travel_shap_title_search.xml
+++ b/app/src/main/res/drawable/travel_shap_title_search.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#fcf9f9" />
+        android:color="@android:color/black" />
     <corners
         android:bottomLeftRadius="100dp"
         android:bottomRightRadius="100dp"
