--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -76,27 +76,33 @@
 
         </RelativeLayout>
 
-
-        <TextView
-            android:id="@+id/travel_fragment_textview_ch_city"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/travel_ftagment_linelayout_textview_city_name_and_english"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
-            android:text="城市"
-            android:textColor="@android:color/white"
-            android:textSize="30sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/travel_fragment_textview_english_city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:text="city"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/travel_fragment_textview_ch_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25dp"
+                android:text="城市"
+                android:textColor="@android:color/white"
+                android:textSize="30sp" />
 
+            <TextView
+                android:id="@+id/travel_fragment_textview_english_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:text="city"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
